重构服务器控制器